--- a/newFile.html
+++ b/newFile.html
@@ -1,1 +1,1 @@
-Well this is a file I want to commit
+Well this is a file I want to commit and this is a second version to see the differents commits
