le empezamos a dar forma de html en esta version 4

--- a/newFile.html
+++ b/newFile.html
@@ -1,2 +1,13 @@
-Well this is a file I want to commit and this is a second version to see the differents commits
-Al parecer hay un nuevo commit por hacer en este curso
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <link rel="stylesheet" href="css/styles.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bueno vamos a hacer algo más lindo</title>
+</head>
+<body>
+    <p>Este es un p para mostrar algo</p>
+</body>
+</html>
