nuevo commit para nueva rama

--- a/newFile.html
+++ b/newFile.html
@@ -8,6 +8,8 @@
     <title>Bueno vamos a hacer algo más lindo</title>
 </head>
 <body>
+    <h1>Comenzamos a crear distintas ramas</h1>
     <p>Este es un p para mostrar algo</p>
+    <div>Esto es un div random che que poca creatividad.</div>
 </body>
 </html>
