--- a/newFile.html
+++ b/newFile.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bueno vamos a hacer algo más lindo</title>
 </head>
+<header>
+    Cabecera
+</header>
 <body>
     <h1>Comenzamos a crear distintas ramas</h1>
     <p>Este es un p para mostrar algo</p>
