cambios hechos en master del body

--- a/newFile.html
+++ b/newFile.html
@@ -10,6 +10,6 @@
 <body>
     <h1>Comenzamos a crear distintas ramas</h1>
     <p>Este es un p para mostrar algo</p>
-    <div>Esto es un div random che que poca creatividad.</div>
+    <div>Probamos de cambiar el cuerpo del html para luego hacer un merge y ver como se fusionan los cambios hechos en el otro brach cabecera.</div>
 </body>
 </html>
