--- a/newFile.html
+++ b/newFile.html
@@ -8,7 +8,7 @@
     <title>Bueno vamos a hacer algo más lindo</title>
 </head>
 <header>
-    Cabecera
+    Cabecera pero sin css. Flashe pero bueno
 </header>
 <body>
     <h1>Comenzamos a crear distintas ramas</h1>
