--- a/newFile.html
+++ b/newFile.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bueno vamos a hacer algo más lindo</title>
+    <title>Probando conflictos en Merge</title>
 </head>
 <header>
     Cabecera pero sin css. Flashe pero bueno
